[package]
name = "leim"
version = "0.1.0"
authors = ["21Analytics <info@21analytics.ch>"]
edition = "2021"
license = "MIT"

[lib]
doctest = false

[dependencies]
async-graphql = { optional = true, version = "5", default-features = false, features = [ "chrono" ] }
diesel = { optional = true, version = "2", default-features = false }
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
