[package]
name = "leim"
version = "0.1.2"
authors = ["21 Analytics <info@21analytics.ch>"]
edition = "2021"
license = "MIT"
description = "A library to handle Legal Entity Identifiers (LEIs)"
documentation = "https://docs.rs/leim/"
homepage = "https://21analytics.ch"
repository = "https://gitlab.com/21analytics/lei"
keywords = ["lei", "iso-17442"]
categories = ["finance"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-graphql = { optional = true, version = "5", default-features = false, features = [ "chrono" ] }
diesel = { optional = true, version = "2.0.*", default-features = false }
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
